Update swagger generation wit routing file.
