# server/routes/swagger.js
@@ -2,9 +2,12 @@ const swaggerAutogen = require('swagger-autogen')()
 
 const outputFile = './public/swagger_output.json'
 const endpointsFiles = [
-  './routes/auth.js',
-  './routes/dog.js',
-  './routes/match.js',
+  './routes/router.js',
 ]
-
-swaggerAutogen(outputFile, endpointsFiles);
+swaggerAutogen(outputFile, endpointsFiles, {
+  host: "localhost:8080",
+  basePath: "/api/v1",
+  schemes: ['http', 'https'],
+  consumes: ['application/json'],
+  produces: ['application/json'],
+});
